Fixed summary not showing up

--- a/frontend/src/assets/styles/MyDashboard.css
+++ b/frontend/src/assets/styles/MyDashboard.css
@@ -112,6 +112,7 @@ body {
     flex-wrap: wrap;
     gap: 2rem;
     flex-direction: column;
+    overflow-y: auto;
     color:var(--color-title); 
   }
   
@@ -126,19 +127,14 @@ body {
     /* color: black; */
     color:var(color-title); 
     position: relative;
+    box-sizing: border-box;
   }
   
   .full-width {
     flex: 1 1 100%;
     min-width: 100%;
   }
-  
-  .half-width {
-    flex: 1 1 48%;
-    min-width: 300px;
-    max-width: 100%;
-  }
-  
+    
   .card-content h2 {
     font-size: 1.6rem;
     font-weight: 700;
@@ -799,8 +795,7 @@ body {
     right: 0;
   
     overflow-y: auto;
-    padding: 2rem;
-    
+     
     transition: opacity 0.3s ease;
   }
 
@@ -811,8 +806,6 @@ body {
     opacity: 0;
     pointer-events: none;
   }
-
- 
 }
 
 
